Added Navier-Stokes forumla

--- a/Rapport/MoS - Projektrapport.tex
+++ b/Rapport/MoS - Projektrapport.tex
@@ -146,7 +146,8 @@ Marcus Nygren, marny568}
 			
 		\Subsection{Modellering}
 		\emph{Övergripande beskrivning kring modellerings implementationen i vårt projekt.}
-			
+		
+		\frac{du}{dt}=-(u\cdot \nabla) \cdot - \frac{1}{\rho} \nabla \rho + v \nabla^{2}u + F	
 
 	\Section{Numerisk implementation}
 		\emph{Var noga med att ha med era numeriska värden från Matlab. Vilka parametrar användes? Ha med allting som är relevant.}
