--- a/Rapport/MoS - Projektrapport.tex
+++ b/Rapport/MoS - Projektrapport.tex
@@ -171,9 +171,9 @@ Marcus Nygren, marny568}
 		
 		\begin{figure}[ht!]
 			\centering
-			\includegraphics[width=90mm]{fixed_dome1.jpg}
-			\caption{A simple caption}
-			\label{overflow}
+			\includegraphics[width=90mm]{QtGui}
+			\caption{Användargränsnittet skapat i Qt}
+			\label{QtGui}
 		\end{figure}
 		
 		\Subsection{GLFW}
@@ -184,16 +184,19 @@ Marcus Nygren, marny568}
 	\Section{Diskussion}
 		\emph{Vilka saker gick snett? Vilka saker gick strålande? Varför?}
 		
-		SKRIV TEXT HÄR...
+		Projektet Elements började som en idé för ett pedagodiskt verktyg för att lära sig Navier-Stokes ekvationer. För att uppnå denna kvalité på användargränsnittet beslutades det tidigt i projektet att använda C++ biblioteket Qt. Mycket tid lades ner för att få en Qt implemention tillsammans med OpenGL. Men skrotades långt in i projektarbetetsgång, då denna form av implementation var för avancerad. GLFW blev istället det självklara valet för att hinna klart Elements så långt in i projektets gång.
 
 	\Section{Resultat}
 		\emph{Projektets resultat. Om man följer hela workflowen i metod-delen vart hamnar man då? Vad kom vi fram till?}
 		
-		OCH HÄR..
+		TEXT..
 
 	\newpage
-	\Section{Referenser}
-		\emph{En lista på alla våra referenser i ordning där de används först i texten. Exempelvis: Papers på internet, böcker och andra externa informationskällor.}
+	\begin{thebibliography}{9}
+		\bibitem{pfleeger10softwareengineering}
+			%Exempelreferens
+		  	Shari Lawrence Pfleeger och Joanne M. Atlee, \emph{Software Engineering, Fourth Edition, International Edition}, Pearson 2010  
+	\end{thebibliography}
 		
 	\newpage
 	\appendix
