--- a/Rapport/MoS - Projektrapport.tex
+++ b/Rapport/MoS - Projektrapport.tex
@@ -178,7 +178,7 @@ Marcus Nygren, marny568}
 		\begin{figure}[ht!]
 			\centering
 			\includegraphics[width=90mm]{QtGui}
-			\caption{Användargränsnittet skapat i Qt}
+			\caption{Användargränsnittet skapat i Qt som inte kom med till slutresultatet}
 			\label{QtGui}
 		\end{figure}
 		
