--- a/Rapport/TNM085_GROUP1.tex
+++ b/Rapport/TNM085_GROUP1.tex
@@ -270,7 +270,7 @@ Marcus Nygren, marny568}
 		\end{equation}
 	\end{center}
 	
-	Utveckling av ekvation $ \ref{eq:Konservering av rörelsemängd 4} $ ger ett samband som kan knytas till Newtons andra lag, $ \bold F = m \bold a $, se ekvation  $ \ref{eq:Konservering av rörelsemängd 5} $ och $ \ref{eq:Konservering av rörelsemängd 6} $, där $ \varrho $ representerar massan $ m $, $ \bold b $ yttre krafter $ \bold F $ och där materialderivatan för $ \bold u $ representerar accelerationen $ \bold a $. $ \sigma $ är Cauchys spänningstensor och kan förenklas till $ \sigma = -\pi I +  \bold \Gamma $.
+	Utveckling av ekvation $ \ref{eq:Konservering av rörelsemängd 4} $ ger ett samband som kan knytas till Newtons andra lag, $ \bold F = m \bold a $, se ekvation  $ \ref{eq:Konservering av rörelsemängd 5} $ och $ \ref{eq:Konservering av rörelsemängd 6} $, där $ \varrho $ representerar massan $ m $, $ \bold b $ yttre krafter $ \bold F $ och där materialderivatan för $ \bold u $ representerar accelerationen $ \bold a $. $ \sigma $ är Cauchys spänningstensor och kan förenklas till $ \sigma = -pI +  \bold \Gamma \ $, där $ p $ är tryck, $ I $ är identitesmatrisen, 
 	
 	\begin{center}
 		\begin{equation}\label{eq:Konservering av rörelsemängd 5}
@@ -295,7 +295,7 @@ Marcus Nygren, marny568}
 		\end{equation}
 	\end{center}
 	
-	Genom att studera en voxel i en fluid fås att kraften $ \bold b $ kan delas upp i två termer: en som härstammar från tryck, $ \nabla \cdot \sigma $ av rank två, och en, $ \bold f $, som härstammar från yttre krafter som exempelvis gravitationen. 
+	Genom att studera en voxel i en fluid fås att kraften $ \bold b $ kan delas upp i två termer engligt $ \bold b =   \nabla \cdot \sigma + \bold f $, där $ \nabla \cdot \sigma $ härstammar från tryck och där $ \bold f $ härstammar från yttre krafter.
 		
 		
 	\Subsection{Konservering av energi}
